samples/_failures_safe/1761354074_3cdfef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feb8752d.c: In function ‘main’:
./samples/SAFE/__tmp_feb8752d.c:182:12: error: missing terminating " character
  182 |     printf("
      |            ^
./samples/SAFE/__tmp_feb8752d.c:182:5: error: expected expression at end of input
  182 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_feb8752d.c:182:5: error: expected declaration or statement at end of input
